# sdlresinfo

./: Makefile.am  acinclude.m4  configure.ac  extermination  main.cpp
msvc/: resource.h  sdlresinfo.rc  sdlresinfo.sln  sdlresinfo.vcproj
msvc/sdl/: README.txt
